--- a/helm/seatrain-base/templates/common-env.yaml
+++ b/helm/seatrain-base/templates/common-env.yaml
@@ -7,8 +7,6 @@ metadata:
     helm.sh/hook-weight: "-1"
 data:
   REDIS_URL: redis://{{ .Release.Name }}-redis-master.default.svc.cluster.local
-{{- if .Values.global.commonEnv -}}
   {{- range $key, $value := .Values.global.commonEnv }}
-    {{ $key }}: {{ $value | b64enc | quote }}
+    {{ $key }}: {{ $value | quote }}
   {{- end }}
-{{- end -}}
