--- a/helm/seatrain-base/templates/db-prepare.yaml
+++ b/helm/seatrain-base/templates/db-prepare.yaml
@@ -7,7 +7,7 @@ metadata:
     helm.sh/hook: pre-upgrade, pre-install
     helm.sh/hook-delete-policy: hook-succeeded, hook-failed
 spec:
-  activeDeadlineSeconds: 180
+  activeDeadlineSeconds: {{ .Values.global.db.deadLineSeconds }}
   backoffLimit: 3
   template:
     spec:
